Impl japp file parser